ajuste variables de entorno

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,23 @@
-server.port=8083
+# Server Configuration
+server.port=${SERVER_PORT}
 
+# Application Name
 spring.application.name=MSEL001
 
-spring.datasource.url=jdbc:oracle:thin:@//192.169.21.59:1521/TEST
-spring.datasource.username=aq_admin
-spring.datasource.password=Aq_admin_2022
+# Database Configuration
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-spring.cloud.gcp.project-id=go2cloud-activos-reclut-dev
+# Google Cloud Configuration
+spring.cloud.gcp.project-id=${GCP_PROJECT_ID}
 spring.cloud.gcp.firestore.emulator.enabled=false
-spring.cloud.gcp.firestore.credentials.location=classpath:serviceAccountKey.json
+spring.cloud.gcp.firestore.credentials.location=${GCP_CREDENTIALS_LOCATION}
 
-# Deshabilitar JMX
-spring.jmx.enabled=false
+# Disable JMX
+spring.jmx.enabled=${JMX_ENABLED:false}
+
+# Logging (opcional, descomenta si lo necesitas)
+#logging.level.root=${LOG_LEVEL:INFO}
+#logging.level.com.co.activos.msel0001=${APP_LOG_LEVEL:DEBUG}
