--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Server Configuration
-server.port=${SERVER_PORT}
+server.port=${SERVER_PORT:8080}
 
 # Application Name
 spring.application.name=MSEL001
