--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,13 @@ server.port=${SERVER_PORT:8080}
 spring.application.name=MSEL001
 
 # Database Configuration
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${DB_URL:jdbc:oracle:thin:@//192.168.21.222:1521/ACTIV}
+spring.datasource.username=${DB_USERNAME:aq_admin}
+spring.datasource.password=${DB_PASSWORD:Aq_admin_2024}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+spring.cloud.gcp.firestore.credentials.location=${GCP_FIRESTORE_CREDENTIALS_LOCATION:classpath:serviceAccountKey.json}
+spring.cloud.gcp.project-id=go2cloud-activos-reclut-prod
 
 
 # Disable JMX
