Ajuste configuracion properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,12 @@ spring.datasource.username=${DB_USERNAME:aq_admin}
 spring.datasource.password=${DB_PASSWORD:Aq_admin_2024}
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-spring.cloud.gcp.firestore.credentials.location=${GCP_FIRESTORE_CREDENTIALS_LOCATION:classpath:serviceAccountKey.json}
-spring.cloud.gcp.project-id=go2cloud-activos-reclut-prod
+#spring.cloud.gcp.firestore.credentials.location=${GCP_FIRESTORE_CREDENTIALS_LOCATION:classpath:serviceAccountKey.json}
+#spring.cloud.gcp.project-id=go2cloud-activos-reclut-prod
 
 
 # Disable JMX
-spring.jmx.enabled=${JMX_ENABLED:false}
+#spring.jmx.enabled=${JMX_ENABLED:false}
 
 # Logging (opcional, descomenta si lo necesitas)
 #logging.level.root=${LOG_LEVEL:INFO}
